<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.airbnb.lottie.LottieAnimationView
      android:id="@+id/loadingAnimation"
      android:layout_width="100dp"
      android:layout_height="100dp"
      app:lottie_rawRes="@raw/loading"
      app:lottie_autoPlay="true"
      app:lottie_loop="true"
      android:visibility="gone"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />

    <ImageView
      android:id="@+id/iv_preview_image"
      android:layout_width="0dp"
      android:layout_height="200dp"
      android:contentDescription="@string/preview_image"
      android:scaleType="centerCrop"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/empty_image_jpg" />

    <Button
      style="@style/Widget.Material3.Button.TonalButton"
      android:id="@+id/btn_gallery"
      android:backgroundTint="@color/navy"
      android:layout_width="0dp"
      android:layout_height="64dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="8dp"
      android:textColor="@color/white"
      android:text="@string/gallery"
      app:layout_constraintEnd_toStartOf="@+id/btn_camera"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/iv_preview_image" />

    <Button
      style="@style/Widget.Material3.Button.TonalButton"
      android:id="@+id/btn_camera"
      android:backgroundTint="@color/navy"
      android:layout_width="0dp"
      android:layout_height="64dp"
      android:textColor="@color/white"
      android:layout_marginStart="8dp"
      android:text="@string/camera"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/btn_gallery"
      app:layout_constraintTop_toTopOf="@+id/btn_gallery" />

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/til_description"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn_gallery">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="5" />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
      style="@style/Widget.Material3.Button.TonalButton"
      android:id="@+id/btn_upload"
      android:backgroundTint="@color/navy"
      android:layout_width="0dp"
      android:layout_height="64dp"
      android:layout_marginTop="16dp"
      android:textColor="@color/white"
      android:text="@string/upload"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/checkbox_location" />

    <com.google.android.material.checkbox.MaterialCheckBox
      android:id="@+id/checkbox_location"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/use_current_location"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/til_description"/>
  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>